# chess-rs

./: .gitignore  Cargo.toml
src/: config.rs  lib.rs  main.rs
src/chess/: board.rs  game.rs  mod.rs  moves.rs  pieces.rs
src/discord/: bot.rs
src/discord/commands/: admin.rs  game.rs  mod.rs  util.rs
src/http/: auth_manager.rs  http_server.rs  mod.rs  proto.rs  web_socket.rs
src/system/: game.rs
src/util/: board_visualizer.rs  mod.rs
