[package]
name = "chess-bot"
version = "0.1.0"
authors = ["KrekBuk <register@mrgregorix.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.9"
imageproc = "0.21.0"
rusttype = "0.9.2"
serenity = "0.9.0-rc.1"
tokio = "0.2.22"
