[package]
name = "chess-bot"
version = "0.1.0"
authors = ["KrekBuk <register@mrgregorix.net>"]
edition = "2018"

[dependencies]
actix = "0.10.0"
actix-rt = "1.1.1"
actix-session = "0.4.0"
actix-web = "3.0.1"
actix-web-actors = "3.0.0"
async-trait = "0.1.40"
futures = "0.3.5"
futures-util = "0.3.5"
http = "0.1"
image = "0.23.9"
imageproc = "0.21.0"
lazy_static = "1.4.0"
oauth2 = { version = "3.0", features = ["futures-03", "reqwest-010"], default-features = false }
regex = "1.3.9"
rusttype = "0.9.2"
serenity = "0.9.0-rc.1"
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0.57"
tokio = "0.2.22"
tokio-reactor = "0.1.12"
toml = "0.5.6"
url = "2.1"
