[package]
name = "chess-bot"
version = "0.1.0"
authors = ["KrekBuk <register@mrgregorix.net>"]
edition = "2018"

[dependencies]
actix = "0.10.0"
actix-session = "0.4.0"
actix-web = "3.0.1"
actix-web-actors = "3.0.0"
futures = "0.3.5"
image = { version = "0.23.9", default-features = false, features = ["png"] }
imageproc = "0.21.0"
once_cell = "1.4.1"
oauth2 = { version = "3.0", features = ["futures-03", "reqwest-010"], default-features = false }
regex = "1.3.9"
rusttype = "0.9.2"
serenity = "0.9.0-rc.1"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
tokio = { version = "0.2.22", default-features = false, features = ["sync", "rt-threaded", "macros"] }
toml = "0.5.6"
thiserror = "1.0.20"